mariadb -> h2 임시 DB

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,27 @@
+#spring:
+#  datasource:
+#    url: jdbc:mariadb://localhost:3306/
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    username: inhouseculture
+#    password: FwbnwrpJqLDU
+#  jpa:
+#    open-in-view: false
+#    generate-ddl: true
+#    show-sql: true
 spring:
+  h2:
+    console:
+      enabled: true							# h2 콘솔 사용
+      path: /h2									# localhost:port/h2 로 접근 가능
+      settings:
+        trace: false						# Print additional trace information
+        web-allow-others: true	# 브라우저로 접근가능하게 하기
+  profiles:
+    active: local
+  # H2 메모리 DB를 위한 설정
   datasource:
-    url: jdbc:mariadb://localhost:3306/
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: inhouseculture
-    password: FwbnwrpJqLDU
-  jpa:
-    open-in-view: false
-    generate-ddl: true
-    show-sql: true
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1 # userdb 스키마에 mem인 메모리 데이터 베이스로 동작
+    username: sa
+    password:
+    sql-script-encoding: utf-8
